corrected text alignment to center on main content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,6 @@ body {
 }
 
 
-/*main body styles*/
-
-
 /*Title link*/
 .header {
     display: grid;
@@ -132,8 +129,7 @@ a:focus {
 .main {
     border: 2px #4a4a4a;
     background-color: rgba(74, 74, 74, 0.9);
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     margin: 5px;
     padding: 5px;
     border-radius: 10px;
